--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution.ipynb
@@ -62,9 +62,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Calculate the diameter and circumference of a pizza. Input the radius from the user. The diameter is twice the radius. The circumference is calculated as: 2 ,  \n",
+    "## Question 2 (5 Marks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate the diameter and circumference of a pizza. Input the radius from the user. The diameter is twice the radius. The circumference is calculated as: $2\\pi r$ where $\\pi$ is approximately 3.14 and r is the radius. Print the result in the following format \"***For a pizza with radius r, the diameter is d and the circumference is c***\"\", where ***r*** is the radius, ***d*** is the diameter and ***c*** is the circumference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius 7.0, the diameter is 14.0 and the circumference is 43.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "PI = 3.14\n",
     "\n",
-    "   ℎ 3.14     ℎ  .  Print the result in the following format “***For a pizza with radius r, the diameter is d and the circumference is c***”, where ***r*** is the radius, ***d*** is the diameter and ***c*** is the circumference.    (5 Marks) \n",
+    "radius = 5\n",
+    "radius = float(input(\"Enter the radius of the circle: \"))\n",
+    "\n",
+    "diameter = 2 * radius\n",
+    "circumference = 2 * PI * radius\n",
+    "\n",
+    "print(f\"The area of the circle with radius {radius}, the diameter is {diameter} and the circumference is {circumference:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "3. Use a loop to print the following numbers: 3, 6, 9, 12, 15, 18, 21.    (3 Marks)  \n",
     "3. Input 6 numbers from the keyboard using a loop. Add up the numbers. Print the result in the format “***The sum of the numbers entered is: n***” , where n is the sum of the numbers entered.   (5 Marks)  \n",
