--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution.ipynb
@@ -26,25 +26,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "Input two numbers from the user and test which is the bigger of the two. The output should be in the following format: “**The larger of the numbers  *n1* and *n2* is *nbigger”***, where ***n1*** and ***n2*** are the numbers entered and ***nbigger*** is the larger of the two numbers."
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Answer 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The larger of the numbers 50 and 34 is 50\n"
+      "The larger of the numbers 4 and 7 is 7\n"
      ]
     }
    ],
    "source": [
-    "number1 = 10\n",
+    "number1 = 30\n",
     "number2 = 20\n",
     "\n",
     "number1 = int(input(\"Enter the first number: \"))\n",
@@ -73,15 +80,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Answer 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The area of the circle with radius 7.0, the diameter is 14.0 and the circumference is 43.96\n"
+      "The area of the circle with radius 6.0, the diameter is 12.0 and the circumference is 37.68\n"
      ]
     }
    ],
@@ -94,14 +109,23 @@
     "diameter = 2 * radius\n",
     "circumference = 2 * PI * radius\n",
     "\n",
-    "print(f\"The area of the circle with radius {radius}, the diameter is {diameter} and the circumference is {circumference:.2f}\")\n"
+    "print(\n",
+    "    f\"The area of the circle with radius {radius}, the diameter is {diameter} and the circumference is {circumference:.2f}\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 3 (5 Marks)\n"
+    "## Question 3 (3 Marks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use a loop to print the following numbers: 3, 6, 9, 12, 15, 18, 21."
    ]
   },
   {
@@ -109,13 +133,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "Use a loop to print the following numbers: 3, 6, 9, 12, 15, 18, 21.    (3 Marks)  \n",
-    "\n"
+    "### Answer 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -151,23 +174,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Answer 4"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum of the numbers entered is: 24\n"
+      "The sum of the numbers entered is: 21\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "sum=0\n",
-    "for number in range (1, 7):\n",
-    "    sum+=int(input(f\"Enter number {number}\"))\n",
+    "sum = 0\n",
+    "for number in range(1, 7):\n",
+    "    sum += int(input(f\"Enter number {number}\"))\n",
     "\n",
     "print(f\"The sum of the numbers entered is: {sum}\")"
    ]
@@ -176,7 +206,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 5 (5 Marks)\n",
+    "## Question 5 (5 Marks)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Create a string called ***course*** containing the text \"Medical Technology 2022\" \n"
    ]
   },
@@ -185,12 +221,20 @@
    "metadata": {},
    "source": [
     "### Question 5.1 (2 Marks)\n",
-    "Print the course initials side by side i.e. MT"
+    "\n",
+    "Print the course initials side by side i.e. MT\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer 5.1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -202,20 +246,18 @@
     }
    ],
    "source": [
-    "course=\"Medical Technology 2022\"\n",
+    "course = \"Medical Technology 2022\"\n",
     "\n",
-    "course=\"Technology University of Shannon 2024\"\n",
+    "course = \"Technology University of Shannon 2024\"\n",
     "\n",
     "words = course.split()\n",
     "\n",
-    "\n",
     "initials = \"\"\n",
     "for word in words:\n",
-    "    if word[0].isalpha() and word[0].isupper():\n",
-    "        initials+=word[0]\n",
-    "        \n",
-    "print(initials)\n",
-    "\n"
+    "    if word[0].isupper():\n",
+    "        initials += word[0]\n",
+    "\n",
+    "print(initials)"
    ]
   },
   {
@@ -229,12 +271,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Print ***course***, character by character, each on a new line  (2 Marks) "
+    "Print ***course***, character by character, each on a new line  (2 Marks) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Answer 5.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -290,22 +340,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 5.3 (2 Marks)\n"
+    "### Question 5.3 (2 Marks)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Print the first word in ***course***  (2 Marks) \n",
-    " "
+    "Print the first word in ***course***  (2 Marks) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer 5.3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Technology\n"
+     ]
+    }
+   ],
    "source": [
     "if len(words) > 0:\n",
     "    print(words[0])"
@@ -315,29 +379,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "### Question 5.4 (5 Marks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Technology'"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Create a new string from course containing the word “Technology”\n",
-    "\n"
+    "# Create a new string from course containing the word “Technology”"
    ]
   },
   {
@@ -350,16 +401,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Technology\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_word = words[0]\n",
+    "print(first_word)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "### Answer 5.4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Question 5.5 (5 Marks)"
    ]
   },
@@ -367,36 +435,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Count and display how many of the following words appear in ***course***: no, dice, log, echo"
+    "Count and display how many of the following words [no, dice, log, echo] appear in the string variable `course`:  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Write a program that accepts a number of days e.g 18 as input (from keyboard) and converts that value to weeks and days. For example, 18 days would convert to 2 weeks and 4 days. The output should be in the format “18 days is equal to 2 weeks and 4 days”.  Hint: use modulo division % and floor division //  .    (7 Marks) \n"
+    "### Answer 5.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18 days is 2 weeks and 4 days\n"
+      "Technology University of Shannon 2024\n",
+      "no was found in the course name: 2 times\n",
+      "dice was found in the course name: 0 times\n",
+      "log was found in the course name: 1 times\n",
+      "echo was found in the course name: 0 times\n"
      ]
     }
    ],
    "source": [
-    "user_days = 18\n",
+    "print(course)\n",
     "\n",
-    "weeks = user_days // 7\n",
-    "days = user_days % 7\n",
+    "search_words = [\"no\", \"dice\", \"log\", \"echo\"]\n",
     "\n",
+    "for search_word in search_words:\n",
+    "    print(\n",
+    "        f\"{search_word} was found in the course name: {course.count(search_word)} times\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 5.6 (7 Marks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program that accepts a number of days e.g 18 as input (from keyboard) and converts that value to weeks and days. For example, 18 days would convert to 2 weeks and 4 days. The output should be in the format “18 days is equal to 2 weeks and 4 days”.  Hint: use modulo division % and floor division // .\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer 5.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 /  2 = 4.5\n",
+      "9 // 2 = 4\n",
+      "9 % 2 = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_number = 9\n",
+    "example_divisor = 2\n",
+    "print(f\"{example_number} /  {example_divisor} = {example_number / example_divisor}\")\n",
+    "print(f\"{example_number} // {example_divisor} = {example_number // example_divisor}\")\n",
+    "print(f\"{example_number} % {example_divisor} = {example_number % example_divisor}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19 days is 2 weeks and 3 days\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_days = 19\n",
+    "NUMBER_OF_DAYS_IN_A_WEEK = 8\n",
+    "# user_days = int(input(\"Enter the number of days: \"))\n",
+    "\n",
+    "weeks = user_days // NUMBER_OF_DAYS_IN_A_WEEK\n",
+    "days = user_days % NUMBER_OF_DAYS_IN_A_WEEK\n",
     "\n",
     "print(f\"{user_days} days is {weeks} weeks and {days} days\")"
    ]
