Answer1: Refactor code for inputting numbers with default values

--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
@@ -39,29 +39,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The larger of the numbers 4 and 7 is 7\n"
+      "Using default value 10\n",
+      "Using default value 100\n",
+      "The larger of the numbers 10 and 100 is 100\n"
      ]
     }
    ],
    "source": [
-    "number1 = 30\n",
-    "number2 = 20\n",
+    "number1_input = input(\"Enter the first number: \")\n",
+    "if number1_input == \"\":\n",
+    "    number1 = 10\n",
+    "    print(f\"Using default value {number1}\")\n",
+    "else:\n",
+    "    number1 = int(number1_input)\n",
     "\n",
-    "number1 = int(input(\"Enter the first number: \"))\n",
-    "number2 = int(input(\"Enter the second number: \"))\n",
+    "number2_input = input(\"Enter the second number: \")\n",
+    "if number2_input == \"\":\n",
+    "    number2 = 100\n",
+    "    print(f\"Using default value {number2}\")\n",
+    "else:\n",
+    "    number2 = int(number2_input)\n",
+    "\n",
     "\n",
     "if number1 > number2:\n",
+    "\n",
     "    print(f\"The larger of the numbers {number1} and {number2} is {number1}\")\n",
+    "\n",
     "elif number1 < number2:\n",
+    "\n",
     "    print(f\"The larger of the numbers {number1} and {number2} is {number2}\")\n",
     "else:\n",
+    "\n",
     "    print(\"The numbers are equal\")"
    ]
   },
