--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
@@ -118,7 +118,6 @@
    "source": [
     "PI = 3.14\n",
     "\n",
-    "radius = 5\n",
     "radius = float(input(\"Enter the radius of the circle: \"))\n",
     "\n",
     "diameter = 2 * radius\n",
@@ -546,9 +545,8 @@
     }
    ],
    "source": [
-    "user_days = 19\n",
     "NUMBER_OF_DAYS_IN_A_WEEK = 8\n",
-    "# user_days = int(input(\"Enter the number of days: \"))\n",
+    "user_days = int(input(\"Enter the number of days: \"))\n",
     "\n",
     "weeks = user_days // NUMBER_OF_DAYS_IN_A_WEEK\n",
     "days = user_days % NUMBER_OF_DAYS_IN_A_WEEK\n",
