Whitespace changes only.

--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
@@ -402,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a new string from course containing the word “Technology”"
+    "# Create a new string from course containing the word \"Technology\""
    ]
   },
   {
