Refactor Answer 2 for inputting numbers with default values

--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
@@ -100,13 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Using default value 6.0\n",
       "The area of the circle with radius 6.0, the diameter is 12.0 and the circumference is 37.68\n"
      ]
     }
@@ -114,7 +115,12 @@
    "source": [
     "PI = 3.14\n",
     "\n",
-    "radius = float(input(\"Enter the radius of the circle: \"))\n",
+    "radius_input = input(\"Enter the radius of the circle: \")\n",
+    "if radius_input == \"\":\n",
+    "    radius = 6.0\n",
+    "    print(f\"Using default value {radius}\")\n",
+    "else:\n",
+    "    radius = float(radius_input)\n",
     "\n",
     "diameter = 2 * radius\n",
     "circumference = 2 * PI * radius\n",
