--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
@@ -213,7 +213,8 @@
    "source": [
     "sum = 0\n",
     "for number in range(1, 7):\n",
-    "    sum += int(input(f\"Enter number {number}\"))\n",
+    "    number = int(input(f\"Enter number {number}\"))\n",
+    "    sum += number\n",
     "\n",
     "print(f\"The sum of the numbers entered is: {sum}\")"
    ]
