Refactor code for Answer 4 inputting numbers with default values

--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
@@ -199,21 +199,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum of the numbers entered is: 21\n"
+      "Using default value 3\n",
+      "Using default value 3\n",
+      "Using default value 3\n",
+      "Using default value 3\n",
+      "Using default value 3\n",
+      "Using default value 3\n",
+      "The sum of the numbers entered is: 18\n"
      ]
     }
    ],
    "source": [
     "sum = 0\n",
     "for number in range(1, 7):\n",
-    "    number = int(input(f\"Enter number {number}\"))\n",
+    "    number_input = input(f\"Enter number {number}: \")\n",
+    "    if number_input == \"\":\n",
+    "        number = 3\n",
+    "        print(f\"Using default value {number}\")\n",
+    "    else:\n",
+    "        number = int(number_input)\n",
     "    sum += number\n",
     "\n",
     "print(f\"The sum of the numbers entered is: {sum}\")"
