Refactor code for Answer 5.1 inputting numbers with default values

--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
@@ -262,21 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TUS\n"
+      "T\n"
      ]
     }
    ],
    "source": [
-    "course = \"Medical Technology 2022\"\n",
-    "\n",
-    "course = \"Technology University of Shannon 2024\"\n",
+    "course = input(\"Enter the course name: \")\n",
+    "if course == \"\":\n",
+    "    course = \"Medical Technology 2022\"\n",
+    "    print(f\"Using default value {course}\")\n",
     "\n",
     "words = course.split()\n",
     "\n",
