Refactor code for Answer 5.1 inputting numbers with default values

--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
@@ -16,6 +16,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!--\n",
+      "import data_analytics.github as github\n",
+      "print(github.create_jupyter_notebook_header(\"marcocrowe\", \"learn-python-py\", \"exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb\", \"master\"))\n",
+      "-->\n",
+      "<table style=\"margin: auto;\"><tr><td><a href=\"https://mybinder.org/v2/gh/marcocrowe/learn-python-py/master?filepath=exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb\" target=\"_parent\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open In Binder\"/></a></td><td>online editors</td><td><a href=\"https://colab.research.google.com/github/marcocrowe/learn-python-py/blob/master/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a></td></tr></table>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import data_analytics.github as github\n",
+    "\n",
+    "print(\n",
+    "    github.create_jupyter_notebook_header(\n",
+    "        \"marcocrowe\",\n",
+    "        \"learn-python-py\",\n",
+    "        \"exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb\",\n",
+    "        \"master\",\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!--\n",
+    "import data_analytics.github as github\n",
+    "print(github.create_jupyter_notebook_header(\"marcocrowe\", \"learn-python-py\", \"exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb\", \"master\"))\n",
+    "-->\n",
+    "<table style=\"margin: auto;\"><tr><td><a href=\"https://mybinder.org/v2/gh/marcocrowe/learn-python-py/master?filepath=exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb\" target=\"_parent\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open In Binder\"/></a></td><td>online editors</td><td><a href=\"https://colab.research.google.com/github/marcocrowe/learn-python-py/blob/master/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a></td></tr></table>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -39,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -54,18 +95,19 @@
    ],
    "source": [
     "number1_input = input(\"Enter the first number: \")\n",
-    "if number1_input == \"\":\n",
-    "    number1 = 10\n",
-    "    print(f\"Using default value {number1}\")\n",
-    "else:\n",
-    "    number1 = int(number1_input)\n",
-    "\n",
     "number2_input = input(\"Enter the second number: \")\n",
+    "\n",
+    "if number1_input == \"\":\n",
+    "    number1_input = 10\n",
+    "    print(f\"Using default value {number1_input}\")\n",
+    "\n",
     "if number2_input == \"\":\n",
-    "    number2 = 100\n",
-    "    print(f\"Using default value {number2}\")\n",
-    "else:\n",
-    "    number2 = int(number2_input)\n",
+    "    number2_input = 100\n",
+    "    print(f\"Using default value {number2_input}\")\n",
+    "\n",
+    "\n",
+    "number1 = int(number1_input)\n",
+    "number2 = int(number2_input)\n",
     "\n",
     "\n",
     "if number1 > number2:\n",
@@ -100,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -117,10 +159,10 @@
     "\n",
     "radius_input = input(\"Enter the radius of the circle: \")\n",
     "if radius_input == \"\":\n",
-    "    radius = 6.0\n",
-    "    print(f\"Using default value {radius}\")\n",
-    "else:\n",
-    "    radius = float(radius_input)\n",
+    "    radius_input = 6.0\n",
+    "    print(f\"Using default value {radius_input}\")\n",
+    "\n",
+    "radius = float(radius_input)\n",
     "\n",
     "diameter = 2 * radius\n",
     "circumference = 2 * PI * radius\n",
@@ -154,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -199,19 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Using default value 1\n",
+      "Using default value 2\n",
       "Using default value 3\n",
-      "Using default value 3\n",
-      "Using default value 3\n",
-      "Using default value 3\n",
-      "Using default value 3\n",
-      "Using default value 3\n",
+      "Using default value 4\n",
+      "Using default value 5\n",
+      "Using default value 6\n",
       "The sum of the numbers entered is: 18\n"
      ]
     }
@@ -221,11 +263,9 @@
     "for number in range(1, 7):\n",
     "    number_input = input(f\"Enter number {number}: \")\n",
     "    if number_input == \"\":\n",
-    "        number = 3\n",
+    "        number_input = 3\n",
     "        print(f\"Using default value {number}\")\n",
-    "    else:\n",
-    "        number = int(number_input)\n",
-    "    sum += number\n",
+    "    sum += int(number_input)\n",
     "\n",
     "print(f\"The sum of the numbers entered is: {sum}\")"
    ]
@@ -262,26 +302,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T\n"
+      "Using default value Medical Technology 2022\n",
+      "MT\n"
      ]
     }
    ],
    "source": [
     "course = input(\"Enter the course name: \")\n",
+    "\n",
     "if course == \"\":\n",
     "    course = \"Medical Technology 2022\"\n",
     "    print(f\"Using default value {course}\")\n",
     "\n",
-    "words = course.split()\n",
     "\n",
+    "words = course.split()\n",
     "initials = \"\"\n",
+    "\n",
+    "\n",
     "for word in words:\n",
     "    if word[0].isupper():\n",
     "        initials += word[0]\n",
@@ -313,13 +357,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "M\n",
+      "e\n",
+      "d\n",
+      "i\n",
+      "c\n",
+      "a\n",
+      "l\n",
+      " \n",
       "T\n",
       "e\n",
       "c\n",
@@ -331,32 +383,10 @@
       "g\n",
       "y\n",
       " \n",
-      "U\n",
-      "n\n",
-      "i\n",
-      "v\n",
-      "e\n",
-      "r\n",
-      "s\n",
-      "i\n",
-      "t\n",
-      "y\n",
-      " \n",
-      "o\n",
-      "f\n",
-      " \n",
-      "S\n",
-      "h\n",
-      "a\n",
-      "n\n",
-      "n\n",
-      "o\n",
-      "n\n",
-      " \n",
       "2\n",
       "0\n",
       "2\n",
-      "4\n"
+      "2\n"
      ]
     }
    ],
@@ -388,14 +418,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Technology\n"
+      "Medical\n"
      ]
     }
    ],
@@ -408,29 +438,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 5.4 (5 Marks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a new string from course containing the word \"Technology\""
+    "### Question 5.4 (2 Marks)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Create a new string from ***course*** containing the word “Technology”   (2 Marks)  "
+    "Create a new string from `course` containing the word \"Technology\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +462,7 @@
     }
    ],
    "source": [
-    "first_word = words[0]\n",
+    "first_word = words[1]\n",
     "print(first_word)"
    ]
   },
@@ -476,15 +496,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Technology University of Shannon 2024\n",
-      "no was found in the course name: 2 times\n",
+      "Medical Technology 2022\n",
+      "no was found in the course name: 1 times\n",
       "dice was found in the course name: 0 times\n",
       "log was found in the course name: 1 times\n",
       "echo was found in the course name: 0 times\n"
@@ -525,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -548,23 +568,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Using default value 19\n",
       "19 days is 2 weeks and 3 days\n"
      ]
     }
    ],
    "source": [
     "NUMBER_OF_DAYS_IN_A_WEEK = 8\n",
-    "user_days = int(input(\"Enter the number of days: \"))\n",
+    "\n",
+    "user_days_input = input(\"Enter the number of days: \")\n",
+    "\n",
+    "if user_days_input == \"\":\n",
+    "    user_days_input = 19\n",
+    "    print(f\"Using default value {user_days_input}\")\n",
+    "\n",
+    "user_days = int(user_days_input)\n",
     "\n",
     "weeks = user_days // NUMBER_OF_DAYS_IN_A_WEEK\n",
     "days = user_days % NUMBER_OF_DAYS_IN_A_WEEK\n",
+    "\n",
     "\n",
     "print(f\"{user_days} days is {weeks} weeks and {days} days\")"
    ]
@@ -572,7 +601,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "---\n",
+    "\n",
+    "Author : [Mark Crowe](https://github.com/marcocrowe). \n",
+    "\n",
+    "Copyright &copy; 2024, Mark Crowe. All Rights Reserved."
+   ]
   }
  ],
  "metadata": {
