--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution.ipynb
@@ -39,22 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The larger of the numbers 4 and 7 is 7\n"
+      "The larger of the numbers 10 and 20 is 20\n"
      ]
     }
    ],
    "source": [
-    "number1 = 30\n",
-    "number2 = 20\n",
+    "number1_input = input(\"Enter the first number: \")\n",
     "\n",
-    "number1 = int(input(\"Enter the first number: \"))\n",
+    "number1 = int(number1_input)\n",
     "number2 = int(input(\"Enter the second number: \"))\n",
     "\n",
     "if number1 > number2:\n",
@@ -89,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The area of the circle with radius 6.0, the diameter is 12.0 and the circumference is 37.68\n"
+      "The area of the circle with radius 56.0, the diameter is 112.0 and the circumference is 351.68\n"
      ]
     }
    ],
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum of the numbers entered is: 21\n"
+      "The sum of the numbers entered is: 768\n"
      ]
     }
    ],
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
