Refactor code for Answer 6 to print a square block of numbers

--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution-pro.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -182,8 +182,8 @@
     "END_NUMBER = 22\n",
     "STEP = 3\n",
     "\n",
-    "for number in range(START_NUMBER, END_NUMBER, STEP):\n",
-    "    print(number, end=\" \")"
+    "for loop_number in range(START_NUMBER, END_NUMBER, STEP):\n",
+    "    print(loop_number, end=\" \")"
    ]
   },
   {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -230,11 +230,11 @@
    ],
    "source": [
     "sum = 0\n",
-    "for number in range(1, 7):\n",
-    "    number_input = input(f\"Enter number {number}: \")\n",
+    "for loop_number in range(1, 7):\n",
+    "    number_input = input(f\"Enter number {loop_number}: \")\n",
     "    if number_input == \"\":\n",
     "        number_input = 3\n",
-    "        print(f\"Using default value {number}\")\n",
+    "        print(f\"Using default value {loop_number}\")\n",
     "    sum += int(number_input)\n",
     "\n",
     "print(f\"The sum of the numbers entered is: {sum}\")"
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -294,6 +294,7 @@
     "\n",
     "words = course.split()\n",
     "initials = \"\"\n",
+    "\n",
     "\n",
     "\n",
     "for word in words:\n",
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -561,11 +562,127 @@
     "\n",
     "user_days = int(user_days_input)\n",
     "\n",
+    "\n",
+    "\n",
     "weeks = user_days // NUMBER_OF_DAYS_IN_A_WEEK\n",
     "days = user_days % NUMBER_OF_DAYS_IN_A_WEEK\n",
     "\n",
     "\n",
+    "\n",
     "print(f\"{user_days} days is {weeks} weeks and {days} days\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sample Question 6 (5 Marks)\n",
+    "\n",
+    "Write a Python program take an input `number` and then prints a square block of numbers as shown below:\n",
+    "    \n",
+    "```out\n",
+    "1 2 3 4 5 \n",
+    "1 2 3 4 5\n",
+    "1 2 3 4 5 \n",
+    "1 2 3 4 5 \n",
+    "1 2 3 4 5 \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Answer 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 \n",
+      "1 2 3 4 5 \n",
+      "1 2 3 4 5 \n",
+      "1 2 3 4 5 \n",
+      "1 2 3 4 5 \n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_input = input(\"Enter a number: \")\n",
+    "\n",
+    "if number_input == \"\":\n",
+    "    number_input = 5\n",
+    "    print(f\"Using default value {number_input}\")\n",
+    "\n",
+    "number = int(number_input)\n",
+    "\n",
+    "for loop_number in range(1, number + 1):\n",
+    "    for inner_loop_number in range(1, number + 1):\n",
+    "        print(inner_loop_number, end=\" \")\n",
+    "    print()\n",
+    "\n",
+    "print(\"End of Program\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sample Question 7 (5 Marks)\n",
+    "\n",
+    "\n",
+    "Write a Python program take an input `number` and then prints a right-angled triangle pattern of numbers. The pattern should start with the number 1 on the first line, and each subsequent line should add the next number in sequence, up to 5 lines. The output should look like this:\n",
+    "    \n",
+    "```out\n",
+    "1\n",
+    "1 2\n",
+    "1 2 3\n",
+    "1 2 3 4\n",
+    "1 2 3 4 5\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using default value 5\n",
+      "1 \n",
+      "1 2 \n",
+      "1 2 3 \n",
+      "1 2 3 4 \n",
+      "1 2 3 4 5 \n",
+      "End of Program\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_input = input(\"Enter a number: \")\n",
+    "\n",
+    "if number_input == \"\":\n",
+    "    number_input = 5\n",
+    "    print(f\"Using default value {number_input}\")\n",
+    "\n",
+    "number = int(number_input)\n",
+    "\n",
+    "for loop_number in range(1, number + 1):\n",
+    "    for inner_loop_number in range(1, loop_number + 1):\n",
+    "        print(inner_loop_number, end=\" \")\n",
+    "    print()\n",
+    "\n",
+    "print(\"End of Program\")"
    ]
   },
   {
