Refactor code for Answer 6 to print a square block of numbers

--- a/exam-papers/2023-computing-for-healthcare-coar06006-solution.ipynb
+++ b/exam-papers/2023-computing-for-healthcare-coar06006-solution.ipynb
@@ -544,6 +544,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to determine if an EU traveller will have to restrict movements based on the following rules. Ask the user for the 14 day incidence rate and the positivity rate:\n",
+    "\n",
+    "- Green (no restricted movements required) -If the 14 date rate is less than 25 and the positivity rate is less than 4%\n",
+    "- Orange (get a test within 3 days of departure and no restricted movements required) –If the 14 day incidence rate is less than 50 and the positivity rate is 4% or more OR if the 14 day incidence rate is between 25 and 150 and positivity rate is less than 4%.\n",
+    "- Red (Restrict movements for 14 days) -If the 14 day incidence rate more than 50 and the positivity rate is 4% or more OR if the 14 day incidence rate is more than 150.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "day_rate = int(input(\"Enter d rate\"))\n",
+    "positivity_rate = float(input(\"Enter I case rate\"))\n",
+    "\n",
+    "if day_rate < 25 and positivity_rate < 0.04:\n",
+    "    print(\"Status Green\")\n",
+    "elif (day_rate < 50 and positivity_rate <= 0.04) or (25 < day_rate < 150 and positivity_rate < 0.04):\n",
+    "    print(\"Status Orange\")\n",
+    "elif (day_rate > 50 and positivity_rate == 0.04) or (day_rate > 150):\n",
+    "    print(\"Status Red\")\n",
+    "else:\n",
+    "    print(\"Status Unknown\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a short program using a loop to multiply numbers together. Ask the user how many numbers they would like to multiply, then ask the user to input the numbers and multiply them together. Print the result. Sample output would be as follows:\n",
+    "\n",
+    "```out\n",
+    "How many numbers would you like to multiply? 5\n",
+    "Enter a number: 5\n",
+    "Enter a number: 4\n",
+    "Enter a number: 6\n",
+    "Enter a number: 8\n",
+    "Enter a number: 9\n",
+    "The product of the numbers is: 8640\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The product of the numbers entered is: 8640\n"
+     ]
+    }
+   ],
+   "source": [
+    "product = 1\n",
+    "for number in range(1, 6):\n",
+    "    input_number = int(input(f\"Enter number {number}: \"))\n",
+    "    product *= input_number\n",
+    "\n",
+    "print(f\"The product of the numbers entered is: {product}\")"
+   ]
   }
  ],
  "metadata": {
